--- a/tar_project.ipynb
+++ b/tar_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "id": "ccf18d1d",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "6ec4023b",
    "metadata": {},
    "outputs": [],
@@ -35,15 +35,17 @@
     "nlp = spacy.load(\"en_core_web_lg\")\n",
     "w2v = gensim.models.KeyedVectors.load_word2vec_format(W2V_PATH, binary=True)\n",
     "\n",
-    "def vectorize(token):\n",
-    "    if token.text in w2v:\n",
-    "        return w2v[token.text]\n",
+    "def vectorize(x):\n",
+    "    if not isinstance(x, str): \n",
+    "        x = x.text\n",
+    "    if x in w2v:\n",
+    "        return w2v[x]\n",
     "    return np.random.rand(DIM)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "id": "35e8ef3a",
    "metadata": {},
    "outputs": [],
@@ -56,9 +58,6 @@
     "        one_hot_subreddit = pd.get_dummies(df['subreddit'])\n",
     "        df = df.merge(one_hot_subreddit, left_index=True, right_index=True)\n",
     "        features_to_test += list(one_hot_subreddit)\n",
-    "        \n",
-    "    if include_subreddit == 'meaning':\n",
-    "        df['text'] = df['subreddit'] + ' ' + df['text']\n",
     "    \n",
     "    if include_position:\n",
     "        df['sentence_range'] = df['sentence_range'].apply(lambda sent_range:\n",
@@ -77,6 +76,13 @@
     "    X = np.empty((0, DIM))\n",
     "    for x in df['vectorized']:\n",
     "        X = np.concatenate((X, np.expand_dims(x, axis=0)))\n",
+    "    if include_subreddit == 'meaning':\n",
+    "        df['subreddit'] = df['subreddit'].apply(vectorizer)\n",
+    "        X_sub = np.empty((0, DIM))\n",
+    "        for x in df['subreddit']:\n",
+    "            X_sub = np.concatenate((X_sub, np.expand_dims(x, axis=0)))\n",
+    "        X = np.concatenate((X_sub, X), axis=1)\n",
+    "    \n",
     "    y = df['label'].to_numpy()\n",
     "    \n",
     "    base_features = ['lex_liwc_Clout', 'lex_liwc_i', 'lex_liwc_Tone']\n",
@@ -92,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "id": "ac45ef8f",
    "metadata": {},
    "outputs": [],
@@ -116,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "id": "0cdd2ef5",
    "metadata": {},
    "outputs": [],
@@ -130,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "id": "b1bbe5e3",
    "metadata": {},
    "outputs": [],
@@ -139,18 +145,20 @@
     "    \n",
     "    X_train, y_train = process(TRAIN_PATH, features_to_test.copy(), include_subreddit, include_position, \n",
     "                               include_length)\n",
-    "    clf = LogisticRegression(C=0.01).fit(X_train, y_train)\n",
+    "    clf = LogisticRegression(C=0.01, max_iter=200).fit(X_train, y_train)\n",
     "    X_test, y_test = process(TEST_PATH, features_to_test.copy(), include_subreddit, include_position, \n",
     "                             include_length)\n",
     "    \n",
     "    if len(features_to_test) > 0:\n",
     "        print(\"Additional features:\", features_to_test)\n",
-    "    if include_subreddit:\n",
+    "    elif include_subreddit:\n",
     "        print(\"Include subreddit:\", include_subreddit)\n",
-    "    if include_position:\n",
+    "    elif include_position:\n",
     "        print(\"Include position:\", include_position)\n",
-    "    if include_length:\n",
+    "    elif include_length:\n",
     "        print(\"Include length:\", include_length)\n",
+    "    else:\n",
+    "        print(\"Base:\")\n",
     "          \n",
     "    y_pred = clf.predict(X_test)\n",
     "    print('F1:', f1_score(y_test, y_pred))\n",
@@ -160,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "id": "27696c0e",
    "metadata": {},
    "outputs": [
@@ -168,33 +176,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1: 0.770012706480305\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/vedran/.local/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Base:\n",
+      "F1: 0.7709923664122138\n",
       "Include subreddit: discrete\n",
-      "F1: 0.7694267515923566\n",
+      "F1: 0.7709923664122138\n",
       "Include subreddit: meaning\n",
-      "F1: 0.7668789808917197\n",
-      "Discrete subreddit addition p-value: 0.9470529470529471\n",
-      "Subreddit meaning addition p-value: 0.955044955044955\n"
+      "F1: 0.7715736040609137\n",
+      "Discrete subreddit addition p-value: 1.0\n",
+      "Subreddit meaning addition p-value: 0.952047952047952\n"
      ]
     }
    ],
@@ -212,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "id": "cbb17cc8",
    "metadata": {},
    "outputs": [
@@ -222,7 +211,7 @@
      "text": [
       "Additional features: ['sentiment']\n",
       "F1: 0.7694267515923566\n",
-      "Sentiment addition p-value: 0.961038961038961\n"
+      "Sentiment addition p-value: 1.0\n"
      ]
     }
    ],
@@ -234,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "id": "617128f4",
    "metadata": {},
    "outputs": [
@@ -243,7 +232,7 @@
      "output_type": "stream",
      "text": [
       "Include position: True\n",
-      "F1: 0.770012706480305\n",
+      "F1: 0.7709923664122138\n",
       "Position addition p-value: 1.0\n"
      ]
     }
@@ -256,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "id": "4a80a0c1",
    "metadata": {},
    "outputs": [
@@ -265,8 +254,8 @@
      "output_type": "stream",
      "text": [
       "Include length: True\n",
-      "F1: 0.7668789808917197\n",
-      "Length addition p-value: 0.9590409590409591\n"
+      "F1: 0.7653061224489794\n",
+      "Length addition p-value: 0.9600399600399601\n"
      ]
     }
    ],
@@ -278,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "id": "77d154d5",
    "metadata": {},
    "outputs": [
@@ -287,11 +276,8 @@
      "output_type": "stream",
      "text": [
       "Additional features: ['sentiment']\n",
-      "Include subreddit: True\n",
-      "Include position: True\n",
-      "Include length: True\n",
-      "F1: 0.7719745222929936\n",
-      "Combination addition p-value: 0.9590409590409591\n"
+      "F1: 0.7713920817369093\n",
+      "Combination addition p-value: 0.9600399600399601\n"
      ]
     }
    ],
